# BACKEND_CODE/Swagger_Api_Doc/swagger.yaml
@@ -663,6 +663,146 @@ paths:
                 items:
                   $ref: '#/components/schemas/User'
 
+    # get Comment and Add comment
+  /comments/{videoId}:
+    get:
+      summary: Get comments for a video
+      description: Retrieve comments for a specific video.
+      parameters:
+        - in: path
+          name: videoId
+          required: true
+          schema:
+            type: string
+          description: The ID of the video to retrieve comments for.
+        - in: query
+          name: page
+          schema:
+            type: integer
+            minimum: 1
+            default: 1
+          description: Page number for pagination
+        - in: query
+          name: limit
+          schema:
+            type: integer
+            minimum: 1
+            maximum: 100
+            default: 10
+          description: Number of comments per page
+      responses:
+        '200':
+          description: Comments fetched successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CommentList'
+
+    post:
+      summary: Add a comment to a video
+      description: Add a new comment to the specified video.
+      parameters:
+        - in: path
+          name: videoId
+          required: true
+          schema:
+            type: string
+          description: ID of the video to add a comment to
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                content:
+                  type: string
+      responses:
+        '201':
+          description: Comment added successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Comment'
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              example:
+                error: All fields are required
+        '404':
+          description: Video not found
+          content:
+            application/json:
+              example:
+                error: Video not found
+
+  /comments/c/{commentId}:
+    delete:
+      summary: Delete a comment
+      description: Delete a comment by its ID.
+      parameters:
+        - in: path
+          name: commentId
+          required: true
+          schema:
+            type: string
+          description: ID of the comment to delete
+      responses:
+        '200':
+          description: Comment deleted successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Comment deleted successfully
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              example:
+                error: You don't have access to delete this comment
+
+    patch:
+      summary: Update a comment
+      description: Update the content of a comment.
+      parameters:
+        - in: path
+          name: commentId
+          required: true
+          schema:
+            type: string
+          description: ID of the comment to update
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                content:
+                  type: string
+      responses:
+        '200':
+          description: Comment updated successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Comment updated successfully
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              example:
+                error: You don't have access to update this comment
+
 # Components
 components:
   schemas:
@@ -771,3 +911,35 @@ components:
         - data
         - message
         - success
+
+    CommentList:
+      type: array
+      items:
+        $ref: '#/components/schemas/Comment'
+    Comment:
+      type: object
+      properties:
+        id:
+          type: string
+        content:
+          type: string
+        createdAt:
+          type: string
+        owner:
+          type: object
+          properties:
+            id:
+              type: string
+            username:
+              type: string
+            fullName:
+              type: string
+              nullable: true
+            avatar:
+              type: string
+              nullable: true
+      required:
+        - id
+        - content
+        - createdAt
+        - owner
